--- a/Goldence/View/Base.lproj/Main.storyboard
+++ b/Goldence/View/Base.lproj/Main.storyboard
@@ -1994,16 +1994,16 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TEF-XJ-tBn">
-                                <rect key="frame" x="136.66666666666666" y="359" width="119.99999999999997" height="21"/>
+                                <rect key="frame" x="136.66666666666666" y="359" width="119.99999999999997" height="29.333333333333314"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="120" id="TPg-Jr-oIz"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="17"/>
+                                <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="23"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VvT-A8-UuB">
-                                <rect key="frame" x="119" y="435" width="155" height="35"/>
+                                <rect key="frame" x="119" y="443.33333333333331" width="155" height="35"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="155" id="AUr-vJ-ojV"/>
                                 </constraints>
@@ -2016,7 +2016,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="blc-m8-9R1">
-                                <rect key="frame" x="119" y="500" width="155" height="35"/>
+                                <rect key="frame" x="119" y="508.33333333333326" width="155" height="35"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="155" id="K6k-aM-JKb"/>
                                 </constraints>
@@ -2043,6 +2043,7 @@
                     <connections>
                         <outlet property="analysisButton" destination="VvT-A8-UuB" id="TUV-vo-6Hx"/>
                         <outlet property="editButton" destination="blc-m8-9R1" id="WkO-FL-lPL"/>
+                        <outlet property="nameLabel" destination="TEF-XJ-tBn" id="4jl-WX-CmU"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2dw-Fg-1Vl" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
