--- a/Goldence/View/Base.lproj/Main.storyboard
+++ b/Goldence/View/Base.lproj/Main.storyboard
@@ -49,8 +49,8 @@
                                                             <rect key="frame" x="0.0" y="0.0" width="363" height="164"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Imj-9n-Y53">
-                                                                    <rect key="frame" x="30" y="30" width="60" height="31.333333333333329"/>
-                                                                    <fontDescription key="fontDescription" type="system" weight="light" pointSize="26"/>
+                                                                    <rect key="frame" x="29.999999999999993" y="30" width="77.333333333333314" height="33"/>
+                                                                    <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="26"/>
                                                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
@@ -107,14 +107,7 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="d1K-p0-Jb8" secondAttribute="bottom" constant="10" id="ziS-3W-Trk"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="My Bookshelf" id="gXx-4b-y8y">
-                        <barButtonItem key="leftBarButtonItem" style="plain" systemItem="search" id="Eao-oX-9Cc">
-                            <color key="tintColor" red="0.1215686275" green="0.47843137250000001" blue="0.54901960780000003" alpha="0.84705882349999995" colorSpace="calibratedRGB"/>
-                        </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" style="plain" systemItem="organize" id="wjg-2o-m7L">
-                            <color key="tintColor" red="0.12156862745098039" green="0.47843137254901957" blue="0.5490196078431373" alpha="0.84705882352941175" colorSpace="calibratedRGB"/>
-                        </barButtonItem>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" title="My Bookshelf" id="gXx-4b-y8y"/>
                     <connections>
                         <outlet property="tableView" destination="d1K-p0-Jb8" id="Aww-lz-k7P"/>
                     </connections>
@@ -297,9 +290,9 @@
                                                             </connections>
                                                         </button>
                                                         <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="我常常一個人走很長的路，在起風的時候覺得自己像一片落葉。仰望星空我想知道，有人正從世界的某個地方朝我走來嗎？I'm wondering" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="AGO-r1-t1u">
-                                                            <rect key="frame" x="8" y="30" width="357" height="70"/>
+                                                            <rect key="frame" x="8" y="30" width="357" height="90"/>
                                                             <constraints>
-                                                                <constraint firstAttribute="height" constant="70" id="K3g-sU-9r5"/>
+                                                                <constraint firstAttribute="height" constant="90" id="K3g-sU-9r5"/>
                                                             </constraints>
                                                             <color key="textColor" systemColor="labelColor"/>
                                                             <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="13"/>
@@ -479,7 +472,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="whX-Xv-rpT">
-                                <rect key="frame" x="8" y="52" width="377" height="600"/>
+                                <rect key="frame" x="8" y="60" width="377" height="600"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="600" id="glk-Q6-6jk"/>
@@ -524,7 +517,7 @@
                         <constraints>
                             <constraint firstItem="Mnv-Iv-zwA" firstAttribute="trailing" secondItem="whX-Xv-rpT" secondAttribute="trailing" constant="8" id="Huo-hF-fmr"/>
                             <constraint firstItem="whX-Xv-rpT" firstAttribute="leading" secondItem="Mnv-Iv-zwA" secondAttribute="leading" constant="8" id="Pd2-ce-zhx"/>
-                            <constraint firstItem="whX-Xv-rpT" firstAttribute="top" secondItem="Mnv-Iv-zwA" secondAttribute="top" constant="8" id="sPV-Xa-VJD"/>
+                            <constraint firstItem="whX-Xv-rpT" firstAttribute="top" secondItem="Mnv-Iv-zwA" secondAttribute="top" constant="16" id="sPV-Xa-VJD"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="fDL-s8-jFx"/>
@@ -962,18 +955,18 @@
                                                     <rect key="frame" x="10" y="15" width="373" height="156"/>
                                                     <subviews>
                                                         <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="kFE-an-Awj">
-                                                            <rect key="frame" x="20" y="30" width="333" height="70"/>
+                                                            <rect key="frame" x="20" y="20" width="333" height="100"/>
                                                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                             <constraints>
-                                                                <constraint firstAttribute="height" constant="70" id="MVH-H5-sF4"/>
+                                                                <constraint firstAttribute="height" constant="100" id="MVH-H5-sF4"/>
                                                             </constraints>
                                                             <color key="textColor" systemColor="labelColor"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                            <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="14"/>
                                                             <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                                         </textView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bP6-OR-GtM">
-                                                            <rect key="frame" x="20" y="110" width="333" height="21"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <rect key="frame" x="20" y="130" width="333" height="21.666666666666657"/>
+                                                            <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
@@ -985,7 +978,7 @@
                                                         <constraint firstAttribute="trailing" secondItem="bP6-OR-GtM" secondAttribute="trailing" constant="20" id="S21-By-fde"/>
                                                         <constraint firstAttribute="trailing" secondItem="kFE-an-Awj" secondAttribute="trailing" constant="20" id="X5x-yF-RIK"/>
                                                         <constraint firstItem="kFE-an-Awj" firstAttribute="leading" secondItem="fhN-mU-dJy" secondAttribute="leading" constant="20" id="Zpc-aX-KZE"/>
-                                                        <constraint firstItem="kFE-an-Awj" firstAttribute="top" secondItem="fhN-mU-dJy" secondAttribute="top" constant="30" id="lDI-xe-uDZ"/>
+                                                        <constraint firstItem="kFE-an-Awj" firstAttribute="top" secondItem="fhN-mU-dJy" secondAttribute="top" constant="20" id="lDI-xe-uDZ"/>
                                                     </constraints>
                                                 </view>
                                             </subviews>
@@ -1353,12 +1346,14 @@
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fq8-EI-6Cm">
                                 <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="goldence" translatesAutoresizingMaskIntoConstraints="NO" id="OLI-Zt-lD7">
+                                        <rect key="frame" x="64" y="153" width="264" height="268"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    </imageView>
+                                </subviews>
                                 <color key="backgroundColor" red="0.93982642890000001" green="0.93032664060000003" blue="0.86255544419999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="goldence" translatesAutoresizingMaskIntoConstraints="NO" id="OLI-Zt-lD7">
-                                <rect key="frame" x="0.0" y="132" width="393" height="386"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="tN2-tK-jXM"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -1573,25 +1568,25 @@
                                 </connections>
                             </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fOh-0a-5ML">
-                                <rect key="frame" x="116" y="199" width="136" height="163"/>
+                                <rect key="frame" x="116" y="184" width="136" height="163"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text=" " textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5vf-bE-XMJ">
-                                <rect key="frame" x="22" y="393" width="325" height="54"/>
+                                <rect key="frame" x="22" y="368" width="325" height="54"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text=" " textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VAT-ce-xsM">
-                                <rect key="frame" x="22" y="455" width="325" height="40"/>
+                                <rect key="frame" x="22" y="435" width="325" height="40"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="E4y-ex-4H0">
-                                <rect key="frame" x="116" y="506" width="136" height="35"/>
+                                <rect key="frame" x="116" y="491" width="136" height="35"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.2274509804" green="0.43137254899999999" blue="0.64705882349999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <state key="normal" title="Button"/>
@@ -2003,12 +1998,13 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VvT-A8-UuB">
-                                <rect key="frame" x="119" y="443.33333333333331" width="155" height="35"/>
+                                <rect key="frame" x="119" y="443.33333333333331" width="155" height="36.666666666666686"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="155" id="AUr-vJ-ojV"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Reading Analysis">
+                                    <fontDescription key="titleFontDescription" name="ChalkboardSE-Regular" family="Chalkboard SE" pointSize="16"/>
                                     <color key="baseForegroundColor" red="0.15294117647058825" green="0.29803921568627451" blue="0.46666666666666667" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 </buttonConfiguration>
                                 <connections>
@@ -2016,12 +2012,13 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="blc-m8-9R1">
-                                <rect key="frame" x="119" y="508.33333333333326" width="155" height="35"/>
+                                <rect key="frame" x="119" y="510" width="155" height="34"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="155" id="K6k-aM-JKb"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Edit Profile">
+                                    <fontDescription key="titleFontDescription" name="ChalkboardSE-Regular" family="Chalkboard SE" pointSize="14"/>
                                     <color key="baseForegroundColor" red="0.15294117647058825" green="0.29803921568627451" blue="0.46666666666666667" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 </buttonConfiguration>
                             </button>
