--- a/Goldence/View/Base.lproj/Main.storyboard
+++ b/Goldence/View/Base.lproj/Main.storyboard
@@ -1230,6 +1230,7 @@
                                 <rect key="frame" x="6.6666666666666572" y="163" width="380" height="1"/>
                                 <color key="backgroundColor" red="0.2274509804" green="0.43137254899999999" blue="0.64705882349999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
+                                    <constraint firstAttribute="height" constant="1" id="MFx-mD-I6K"/>
                                     <constraint firstAttribute="width" constant="380" id="kfq-8d-HTX"/>
                                 </constraints>
                             </view>
