--- a/Goldence/View/Base.lproj/Main.storyboard
+++ b/Goldence/View/Base.lproj/Main.storyboard
@@ -197,6 +197,13 @@
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Go to Add page in second tab!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sak-pu-6gO">
+                                <rect key="frame" x="43" y="415" width="305.66666666666674" height="21.666666666666629"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="KMm-hC-whv"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -210,6 +217,7 @@
                     <navigationItem key="navigationItem" id="lCX-Jv-e7f"/>
                     <connections>
                         <outlet property="collectionView" destination="vNv-Z8-T5V" id="08V-eC-JtF"/>
+                        <outlet property="remindLabel" destination="Sak-pu-6gO" id="6EG-PI-C3H"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Di3-rq-kG1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
