--- a/Goldence/View/Base.lproj/Main.storyboard
+++ b/Goldence/View/Base.lproj/Main.storyboard
@@ -1170,27 +1170,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fq8-EI-6Cm">
-                                <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
-                                <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="goldence" translatesAutoresizingMaskIntoConstraints="NO" id="OLI-Zt-lD7">
-                                        <rect key="frame" x="73" y="150" width="247" height="204"/>
-                                    </imageView>
-                                </subviews>
-                                <color key="backgroundColor" red="0.93982642890000001" green="0.93032664060000003" blue="0.86255544419999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="GoldenceTitleView" translatesAutoresizingMaskIntoConstraints="NO" id="vxy-x4-SEt">
+                                <rect key="frame" x="46.666666666666657" y="259" width="300" height="128"/>
                                 <constraints>
-                                    <constraint firstItem="OLI-Zt-lD7" firstAttribute="top" secondItem="fq8-EI-6Cm" secondAttribute="top" constant="150" id="caC-Ck-JbR"/>
-                                    <constraint firstItem="OLI-Zt-lD7" firstAttribute="centerX" secondItem="fq8-EI-6Cm" secondAttribute="centerX" id="pyl-Mg-KJu"/>
+                                    <constraint firstAttribute="width" constant="300" id="dVr-jC-1fa"/>
                                 </constraints>
-                            </view>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="tN2-tK-jXM"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="fq8-EI-6Cm" firstAttribute="top" secondItem="eeI-ra-bDD" secondAttribute="top" id="0dr-Vs-3ii"/>
-                            <constraint firstAttribute="bottom" secondItem="fq8-EI-6Cm" secondAttribute="bottom" id="bX0-xD-0Za"/>
-                            <constraint firstItem="fq8-EI-6Cm" firstAttribute="trailing" secondItem="tN2-tK-jXM" secondAttribute="trailing" id="cOa-Pu-qTq"/>
-                            <constraint firstItem="fq8-EI-6Cm" firstAttribute="leading" secondItem="tN2-tK-jXM" secondAttribute="leading" id="qtV-72-L10"/>
+                            <constraint firstItem="vxy-x4-SEt" firstAttribute="top" secondItem="tN2-tK-jXM" secondAttribute="top" constant="200" id="Zsy-VP-6F1"/>
+                            <constraint firstItem="vxy-x4-SEt" firstAttribute="centerX" secondItem="eeI-ra-bDD" secondAttribute="centerX" id="hLh-SW-DgY"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -1208,39 +1199,42 @@
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BaH-ak-ZDA">
                                 <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
-                                <color key="backgroundColor" red="0.93982642890000001" green="0.93032664060000003" blue="0.86255544419999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I9D-NZ-73S">
-                                <rect key="frame" x="135.33333333333334" y="123.99999999999999" width="122.66666666666666" height="29.333333333333329"/>
-                                <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="23"/>
+                                <rect key="frame" x="129" y="124" width="135" height="78"/>
+                                <fontDescription key="fontDescription" name="Zapfino" family="Zapfino" pointSize="23"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DrB-AG-L7A">
-                                <rect key="frame" x="170.66666666666666" y="442.33333333333331" width="52" height="22"/>
-                                <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="17"/>
+                                <rect key="frame" x="167.33333333333334" y="415" width="58.666666666666657" height="57.666666666666686"/>
+                                <fontDescription key="fontDescription" name="Zapfino" family="Zapfino" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OBv-kw-n3I">
-                                <rect key="frame" x="50" y="484.33333333333331" width="293" height="33.999999999999943"/>
+                                <rect key="frame" x="50" y="492.66666666666669" width="293" height="34.000000000000057"/>
                                 <color key="backgroundColor" red="0.93982642890000001" green="0.93032664060000003" blue="0.86255544419999997" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UNU-uV-Sm9">
-                                <rect key="frame" x="172.66666666666666" y="638.33333333333337" width="48" height="35"/>
+                                <rect key="frame" x="171" y="646.66666666666663" width="51.333333333333343" height="48"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="OK">
-                                    <color key="baseForegroundColor" red="0.2274509804" green="0.43137254899999999" blue="0.64705882349999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                    <fontDescription key="titleFontDescription" name="Zapfino" family="Zapfino" pointSize="10"/>
+                                    <color key="baseForegroundColor" red="0.37647058820000001" green="0.58823529409999997" blue="0.72941176470000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 </buttonConfiguration>
                                 <connections>
                                     <action selector="confirmButtonTapped:" destination="snz-Ms-Hs9" eventType="touchUpInside" id="v6I-nM-AsN"/>
                                     <segue destination="eDr-zW-4Ps" kind="presentation" modalPresentationStyle="overFullScreen" id="MUn-pI-WPU"/>
                                 </connections>
                             </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="goldence" translatesAutoresizingMaskIntoConstraints="NO" id="Gg3-VA-m8P">
-                                <rect key="frame" x="73" y="213.33333333333337" width="247" height="204"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="GoldenceTitleView" translatesAutoresizingMaskIntoConstraints="NO" id="Gg3-VA-m8P">
+                                <rect key="frame" x="46.666666666666657" y="262" width="300" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="300" id="eni-8f-W6T"/>
+                                </constraints>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="BHv-3c-OJf"/>
@@ -1898,6 +1892,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="GoldenceTitleView" width="650" height="128"/>
         <image name="book" catalog="system" width="128" height="99"/>
         <image name="book.circle" catalog="system" width="128" height="123"/>
         <image name="book.fill" catalog="system" width="128" height="95"/>
@@ -1908,7 +1903,6 @@
         <image name="calendar.badge.clock" catalog="system" width="128" height="108"/>
         <image name="camera" catalog="system" width="128" height="93"/>
         <image name="doc.richtext" catalog="system" width="115" height="128"/>
-        <image name="goldence" width="247" height="204"/>
         <image name="open-book" width="512" height="512"/>
         <image name="original_say-the-words-i-love-you-greeting-card" width="1024" height="1024"/>
         <image name="pencil.tip.crop.circle" catalog="system" width="128" height="123"/>
